# messaging-markdown-exporter

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml  release.yml
src/: cli.ts  config.ts  contacts.ts  db.ts  doctor.ts  exporter.ts  formatting.ts  install.ts  telegram-login.ts  types.ts  utils.ts
src/adapters/: imessage.ts  signal.ts  telegram.ts  whatsapp.ts
src/core/: model.ts  render.ts
src/imessage_to_markdown/: cli.py  db.py  exporter.py  formatting.py  models.py  utils.py
src/lib/: signal-keychain.ts
test/: adapters.test.ts  contacts-fallback.test.ts  contacts.test.ts  doctor.test.ts  exporter.test.ts  formatting.test.ts  frontmatter.test.ts  imessage-adapter.test.ts  install-runner.test.ts  install.test.ts  render-edge-cases.test.ts  signal-adapter.test.ts  signal-keychain.test.ts  telegram-errors.test.ts  telegram-helpers.test.ts  utils.test.ts  whatsapp-adapter.test.ts
test/__snapshots__/: install-runner.test.ts.snap
test/e2e/: cli.test.ts  globalSetup.ts
test/fixtures/: generate.ts  imessage.chat.db  signal-config.json  signal.db  whatsapp.ChatStorage.sqlite
test/fixtures/signal/: chat.md
test/fixtures/telegram/: export.json
test/fixtures/whatsapp/: chat.txt
tests/: test_cli.py  test_formatting.py  test_utils.py
